--- a/templates/financial_report.html
+++ b/templates/financial_report.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}گزارش موجودی{% endblock %}
+{% block title %}گزارش مالی{% endblock %}
 {% block content %}
 <div class="container mt-4">
-    <h1>گزارش موجودی</h1>
+    <h1>گزارش مالی</h1>
     <p>این صفحه در دست ساخت است.</p>
 </div>
 {% endblock %} 
